--- a/SE2/Makefile
+++ b/SE2/Makefile
@@ -14,6 +14,8 @@ prog15:  prog15.c $(SE1_dep) prog1_func.o
 prog24:  prog24.c $(SE1_dep) prog1_func.o prog2_func.o
 	gcc -Wall  $^ -o $@
 	
+prog26:  prog26.c $(SE1_dep) prog1_func.o prog2_func.o
+	gcc -Wall  $^ -o $@
 #.PHONY: run
 #run: 
 	
