--- a/SE3/Makefile
+++ b/SE3/Makefile
@@ -1,10 +1,13 @@
 SE1_dep = ../SE1/prog22_func.o ../SE1/prog24_func.o 
-
+SE2_dep = ../SE2/prog1_func.o
 
 %.o: %.c
-	gcc -g -c $< -o $@
+	gcc -g -Wall -c $< -o $@
 
-prog1:  prog1.c $(SE1_dep) funcs.o
+prog1: prog1.h
+	gcc -g -Wall -c $< -o $@
+
+teste: teste.o $(SE1_dep) vecs.o dyns.o $(SE2_dep)
 	gcc -g -Wall $^ -o $@
 
 
